table actions align issue and cell styles issue fixes

--- a/src/app/modules/shared/finlevit-custom-table/custom-table.component.scss
+++ b/src/app/modules/shared/finlevit-custom-table/custom-table.component.scss
@@ -244,6 +244,21 @@
       width: 100%;
       display: flex;
     }
+    &.center {
+      .row-actions {
+        justify-content: center;
+      }
+    }
+    &.left {
+      .row-actions {
+        justify-content: left;
+      }
+    }
+    &.right {
+      .row-actions {
+        justify-content: flex-end;
+      }
+    }
     .edit-action,
     .save-action,
     .cancel-action,
