--- a/src/app/modules/task/payload-form-field/custom-adv-table/custom-adv-table.component.scss
+++ b/src/app/modules/task/payload-form-field/custom-adv-table/custom-adv-table.component.scss
@@ -241,6 +241,21 @@
       width: 100%;
       display: flex;
     }
+    &.center {
+      .row-actions {
+        justify-content: center;
+      }
+    }
+    &.left {
+      .row-actions {
+        justify-content: left;
+      }
+    }
+    &.right {
+      .row-actions {
+        justify-content: flex-end;
+      }
+    }
     .edit-action,
     .save-action,
     .cancel-action,
